@@ -1,3 +1,7 @@
+2010-12-17  Ingo Renner  <ingo@typo3.org>
+
+	* Fixed issue #16764: Insufficient information about which class is failing to implement interfaces in tslib_cObj->start()
+
 2010-12-16  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Release of TYPO3 4.4.5
